added function to end game and submit score

--- a/index.html
+++ b/index.html
@@ -42,6 +42,18 @@
                 <h4 id="answer"></h4>
             </div>
         </div>
+        <div class="enter-score hide">
+            <label>Enter Your High Initials Here:</label>
+            <input class="" type="text" name="user-name" id="user-name">
+            <button id="submit-btn">Submit Score</button>
+        </div>
+        <div class="high-scores hide">
+            <h1>High Scores</h1>
+            <ul class="score-list">
+                <li></li>
+            </ul>
+            <button class="return-btn">Home Page</button>
+        </div>
     </main>
     <script src=./assets/script.js></script>
 </body>
