fixed uncaught errer exception, added loop to home

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <ul class="score-list">
                 <li></li>
             </ul>
-            <button class="return-btn">Home Page</button>
+            <button id="return-btn">Home Page</button>
         </div>
     </main>
     <script src=./assets/script.js></script>
