added leaderboard with appendChild

--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
             </div>
         </div>
         <div class="enter-score hide">
-            <label>Enter Your High Initials Here:</label>
-            <input class="" type="text" name="user-name" id="user-name">
-            <button id="submit-btn">Submit Score</button>
+            <h2>Final Score:<span class="final-score" id="score-total">0</span></h2>
+            <label for="user-name">Enter Your High Initials Here:</label>
+            <input type="text" name="user-name" id="user-name">
+            <button type="submit" class="submit" id="submit-btn">Submit Score</button>
         </div>
         <div class="high-scores hide">
             <h1>High Scores</h1>
-            <ul class="score-list">
-                <li></li>
+            <ul class="high-scores-list">
             </ul>
             <button id="return-btn">Home Page</button>
         </div>
