updated .md to mention issue

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
         <div class="enter-score hide">
             <h2>Final Score:<span class="final-score" id="score-total">0</span></h2>
-            <label for="user-name">Enter Your High Initials Here:</label>
+            <label for="user-name">Enter Your Initials Here:</label>
             <input type="text" name="user-name" id="user-name">
             <button type="submit" class="submit" id="submit-btn">Submit Score</button>
         </div>
